Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.10.1
-
Qt 5.10.1, OS X 10.12.6, Intel HD Graphics 515
Description
Drawing using QPainter::drawImage in an QWidget::paintEvent occasionally draws the image with an invalid/shifted clipping area.
See attached main.cpp for a minimal example reproducing the problem on OS X 10.12.6 with Qt 5.10.1.
See https://stackoverflow.com/q/49930405 for a screenshot.
Attachments
Issue Links
- resulted in
-
QTBUG-68023 Child NSViews use by Cocoa style have wrong frame
-
- Open
-
For Gerrit Dashboard: QTBUG-67998 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
234826,4 | QMacStyle: Make helper-NSViews layer-backed | dev | qt/qtbase | Status: MERGED | +2 | 0 |
237788,3 | QMacStyle: Make helper-NSViews layer-backed | 5.11.2 | qt/qtbase | Status: MERGED | +2 | 0 |